Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-139591

tst_qtquickview_basic times out

XMLWordPrintable

    • Android
    • 9b5a1b8a5 (dev), 2127cbb19 (dev), ed064e4f6 (dev), 0abe66e8a (dev)
    • 2025wk34s2QtforAndroid, 2025wk40s2-3QtforAndroid, 2025wk42s3QtforAndroid

      tst_qtquickview_basic is timing out at the end of the test run, it seems to be passing all fine but fails to exit at the end.

      It seems it might be related to one of these changes:

      ba29d7bf99a Android: qApp->quit() for QtService from terminateQtNativeApplication()
      6aba83405ce Android: simplify the Qt app's exit logic
      db00051673f Android: remove redundant quitQtAndroidPlugin() native method 

      See the failing integration https://testresults.qt.io/coin/api/log/qt/qtdeclarative/fc9d08254da0de1d0d415df145aa296e135f8d19/LinuxRHEL_8_10x86_64AndroidAndroid_ANYx86GCCqtci-linux-RHEL-8.10-x86_64-51-e3099eAndroidTestRun_GenerateSBOM_Packaging_Sccache_UseConfigure_VerifySBOM_WarningsAreErrors/a93b2d5dba50c8022ede18d3a0107d50afc1a426/test_1756287450/log.txt.gz

      See https://testresults.qt.io/coin/integration/qt/qtdeclarative/tasks/1756287359

        For Gerrit Dashboard: QTBUG-139591
        # Subject Branch Project Status CR V

            assam Assam Boudjelthia
            assam Assam Boudjelthia
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: