Android: terminate Qt after main() also for embedded use case

Prior to 6aba83405cea658a5c58eb70dd31f41a9135ae49, Qt was calling
quitQt() if the app is embedding Qt into an Android app, but that
change didn't keep that and instead of only handling the normal
Qt for Android use case.

At the same time, move setStarted() inside the runOnAndroidMainThread()
otherwise native views created from the UI thread might complain being
changed from a different thread like the one startQtNativeApplication()
is called from.

As a pass by, fix the call to "selfStop" JNI method name that mistakenly
had parenthesis in the string.

Amends 6aba83405cea658a5c58eb70dd31f41a9135ae49.

Fixes: QTBUG-139591
Change-Id: I8f7aa47e75ed6fc28ad23fa2178bcd3be7018a59
Reviewed-by: Ville Voutilainen <ville.voutilainen@qt.io>